--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ a{
 }
 
 footer{
-   background-image: linear-gradient(Black,Blue);
+   background-image: linear-gradient(DarkSlateGray,Black);
    margin-top: -21px;
    margin-left: -100px;
    margin-right: -100px;
